# gbp

./: .gitignore  CMakeLists.txt  README.md
include/gbp/: decoder.hpp  decoderB.hpp  decoderQ.hpp  decoderS.hpp  error_channels.hpp  exceptions.hpp  factor.hpp  index.hpp  io_tools.hpp  la_tools.hpp  prob.hpp  properties.hpp  region_graph.hpp  region_graphQ.hpp  smallset.hpp  tanner_graph.hpp  timing.hpp  util.hpp  var.hpp  varset.hpp
sim/: CMakeLists.txt  sim.cpp  sim.sh  sim_q.cpp  sim_rr.cpp  sim_s.cpp  sim_sweep_initial.cpp  sim_sweep_initial_fixed.cpp
sim/input/codes/input_files/surface_gf2_d/: input_surface_11.json  input_surface_13.json  input_surface_3.json  input_surface_33.json  input_surface_5.json  input_surface_7.json  input_surface_9.json
sim/input/codes/input_files/surface_gf2_xz/: input_surface_11.json  input_surface_13.json  input_surface_3.json  input_surface_33.json  input_surface_5.json  input_surface_7.json  input_surface_9.json
sim/input/codes/input_files/surface_gf4_d/: input_surface_11.json  input_surface_13.json  input_surface_3.json  input_surface_5.json  input_surface_7.json  input_surface_9.json
sim/input/codes/input_files/surface_gf4_xz/: input_surface_11.json  input_surface_13.json  input_surface_3.json  input_surface_5.json  input_surface_7.json  input_surface_9.json
sim/input/codes/surface/: surface_13_hx.npy  surface_13_hz.npy  surface_15_hx.npy  surface_15_hz.npy  surface_17_hx.npy  surface_17_hz.npy  surface_21_hx.npy  surface_21_hz.npy  surface_25_hx.npy  surface_25_hz.npy
sim/input/codes/threvertexlifted/: c_1_hz.npy  s_1_hx.npy  s_2_hx.npy  s_2_hz.npy
sim/tools/: merge_output.py  plot.py  plot_details.py
src/: CMakeLists.txt  decoder.cpp  decoderB.cpp  decoderQ.cpp  decoderS.cpp  error_channels.cpp  exceptions.cpp  factor.cpp  properties.cpp  region_graph.cpp  region_graphQ.cpp  tanner_graph.cpp  timing.cpp  util.cpp  varset.cpp
